@@ -131,20 +131,32 @@ This module also appears on the plugin stash, and responds naturally to metaconf
 
 =cut
 
+=begin MetaPOD::JSON v1.1.0
+
+{
+    "namespace":"Dist::Zilla::Plugin::Bootstrap::lib",
+    "interface":"class",
+    "does":"Dist::Zilla::Role::Bootstrap"
+}
+
+=end MetaPOD::JSON
+
+=cut
+
 use Moose;
 with 'Dist::Zilla::Role::Bootstrap';
 
 sub bootstrap {
-  my ( $self ) = @_;
+  my ($self) = @_;
 
   my $bootstrap_root = $self->_bootstrap_root;
 
   if ( not $bootstrap_root ) {
-      return;
+    return;
   }
 
   my $bootstrap_path = $bootstrap_root->child('lib');
-  $self->_add_inc( "$bootstrap_path" );
+  $self->_add_inc("$bootstrap_path");
 
   my $it = $bootstrap_path->iterator( { recurse => 1 } );
 
@@ -159,5 +171,8 @@ sub bootstrap {
   return 1;
 
 }
+
+__PACKAGE__->meta->make_immutable;
+no Moose;
 
 1;
